--- a/templates/index.html
+++ b/templates/index.html
@@ -27,5 +27,9 @@
         <input type="submit" id="cupcake_btn" value="Add cupcake">
 
     </form>
+
+    <script src="https://unpkg.com/jquery"></script>
+    <script src="https://unpkg.com/axios/dist/axios.js"></script>
+    <script src="/static/showCupcakes.js"></script>
 </body>
 </html>
